feat: Add tasks for debugging neovim on linux

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -196,7 +196,12 @@
           "tell app \"Terminal\" to do script \"${workspaceFolder}/packages/cursorless-neovim/scripts/debug-neovim.sh ${workspaceFolder} development\" activate"
         ]
       },
-      // TODO: Add linux
+      "linux": {
+        "command": "scripts/linux-terminal.sh",
+        "args": [
+          "${workspaceFolder}/packages/cursorless-neovim/scripts/debug-neovim.sh ${workspaceFolder} development"
+        ]
+      },
       "group": "build",
       "options": {
         "env": {
@@ -224,7 +229,12 @@
           "tell app \"Terminal\" to do script \"${workspaceFolder}/packages/cursorless-neovim/scripts/debug-neovim.sh ${workspaceFolder} test\" activate"
         ]
       },
-      // TODO: Add linux
+      "linux": {
+        "command": "scripts/linux-terminal.sh",
+        "args": [
+          "${workspaceFolder}/packages/cursorless-neovim/scripts/debug-neovim.sh ${workspaceFolder} test"
+        ]
+      },
       "group": "build",
       "options": {
         "env": {
