feat: working debug on nix

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ packages/test-harness/testSubsetGrep.properties
 
 cursorless.nvim/node/cursorless-neovim
 cursorless.nvim/node/test-harness
+
+# nix
+.direnv
