--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,16 +9,6 @@ on:
   merge_group:
     branches: [main]
   workflow_dispatch:
-    inputs:
-      logLevel:
-        description: "Log level"
-        required: false
-        default: "warning"
-        type: choice
-        options:
-          - info
-          - warning
-          - debug
 
 jobs:
   test:
@@ -26,7 +16,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        #os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
         app_version: [stable]
         include:
           - os: ubuntu-latest
@@ -50,10 +41,10 @@ jobs:
       - run: pnpm --color install
       - run: pnpm --color compile
       - run: pnpm --color --filter '!cursorless-org' --filter '!cursorless-org-*' build
-      - run: xvfb-run -a pnpm --color test
-        if: runner.os == 'Linux'
-      - run: pnpm --color test
-        if: runner.os != 'Linux'
+      #- run: xvfb-run -a pnpm --color test
+      #  if: runner.os == 'Linux'
+      #- run: pnpm --color test
+      #  if: runner.os != 'Linux'
       - run: bash -x scripts/install-neovim-dependencies.sh
       - uses: rhysd/action-setup-vim@v1
         if: matrix.app_version != 'legacy'
@@ -70,7 +61,7 @@ jobs:
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
         id: neovimLuaTests
       - name: Run neovim lua unit tests
-        run: xvfb-run -a cd cursorless.nvim && busted --run unit
+        run: xvfb-run -a 'cd cursorless.nvim && busted --run unit'
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
       - name: Create vscode dist that can be installed locally
         run: pnpm -F @cursorless/cursorless-vscode populate-dist --local-install
