--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,7 +61,7 @@ jobs:
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
         id: neovimLuaTests
       - name: Run neovim lua unit tests
-        run: xvfb-run -a 'cd cursorless.nvim && busted --run unit'
+        run: xvfb-run -a 'pwd && cd cursorless.nvim && busted --run unit'
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
       - name: Create vscode dist that can be installed locally
         run: pnpm -F @cursorless/cursorless-vscode populate-dist --local-install
