--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,12 +58,13 @@ jobs:
         env:
           NEOVIM_PATH: ${{ steps.vim.outputs.executable }}
       - uses: lunarmodules/busted@v2.2.0
+        with:
+          run-tests: false # This prevents automatic test execution
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
         id: neovimLuaTests
       - name: Run neovim lua unit tests
-        #run: xvfb-run -a 'pwd && cd cursorless.nvim && busted --run unit'
-        run: xvfb-run -a 'pwd'
-
+        run: xvfb-run -a 'pwd && cd cursorless.nvim && busted --run unit'
+        #run: xvfb-run -a 'pwd'
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
       - name: Create vscode dist that can be installed locally
         run: pnpm -F @cursorless/cursorless-vscode populate-dist --local-install
