--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,7 +59,7 @@ jobs:
           NEOVIM_PATH: ${{ steps.vim.outputs.executable }}
       - uses: lunarmodules/busted@v2.2.0
         with:
-          args: "-C cursorless.nvim --test unit"
+          args: "-C cursorless.nvim --run unit"
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
         id: neovimLuaTests
       - name: Create vscode dist that can be installed locally
