--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,15 +52,15 @@ jobs:
         with:
           version: ${{ matrix.app_version }}
           neovim: true
-      - name: Run neovim tests
-        run: xvfb-run -a pnpm -F @cursorless/test-harness testNeovim
-        if: runner.os == 'Linux' && matrix.app_version == 'stable'
-        env:
-          NEOVIM_PATH: ${{ steps.vim.outputs.executable }}
+      #      - name: Run neovim tests
+      #        run: xvfb-run -a pnpm -F @cursorless/test-harness testNeovim
+      #        if: runner.os == 'Linux' && matrix.app_version == 'stable'
+      #        env:
+      #          NEOVIM_PATH: ${{ steps.vim.outputs.executable }}
       - name: Run cursorless.nvim busted lua tests
         uses: lunarmodules/busted@v2.2.0
         with:
-          args: "-C cursorless.nvim -lua= ./cursorless.nvim/test/nvim-shim.sh --run unit"
+          args: "-C cursorless.nvim --lua= ./cursorless.nvim/test/nvim-shim.sh --run unit"
 
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
         id: neovimLuaTests
