--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,11 +57,20 @@ jobs:
       #        if: runner.os == 'Linux' && matrix.app_version == 'stable'
       #        env:
       #          NEOVIM_PATH: ${{ steps.vim.outputs.executable }}
-      - name: Run cursorless.nvim busted lua tests
-        uses: lunarmodules/busted@v2.2.0
-        with:
-          args: "-C cursorless.nvim --lua= ./cursorless.nvim/test/nvim-shim.sh --run unit"
+      - name: Set up Lua
+        uses: leafo/gh-actions-lua@v9
+        if: runner.os == 'Linux' && matrix.app_version == 'stable'
 
+      - name: Set up Luarocks
+        uses: leafo/gh-actions-luarocks@v4
+        if: runner.os == 'Linux' && matrix.app_version == 'stable'
+
+      - name: Install Busted
+        run: luarocks install busted
+        if: runner.os == 'Linux' && matrix.app_version == 'stable'
+
+      - name: Run cursorless.nvim busted lua tests
+        run: "xvfb-run 'cd cursorless.nvim && busted --run unit"
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
         id: neovimLuaTests
 
