--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -70,7 +70,9 @@ jobs:
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
 
       - name: Run cursorless.nvim busted lua tests
-        run: "xvfb-run 'cd cursorless.nvim && busted --run unit"
+        run: |
+          cd cursorless.nvim
+          busted --run unit
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
         id: neovimLuaTests
 
