--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,10 +63,14 @@ jobs:
 
       - name: Set up Luarocks
         uses: leafo/gh-actions-luarocks@v4
+        with:
+          luaVersion: "5.1"
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
 
       - name: Install Busted
-        run: luarocks install busted
+        run: |
+          luarocks install busted
+          luarocks install luafilesystem
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
 
       - name: Run cursorless.nvim busted lua tests
