--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
         app_version: [stable]
         include:
           - os: ubuntu-latest
@@ -51,41 +51,6 @@ jobs:
         with:
           version: ${{ matrix.app_version }}
           neovim: true
-      - name: Run neovim tests
-        run: xvfb-run -a pnpm -F @cursorless/test-harness testNeovim
-        if: runner.os == 'Linux' && matrix.app_version == 'stable'
-        env:
-          NEOVIM_PATH: ${{ steps.vim.outputs.executable }}
       - name: Run neovim lua tests
         uses: ./.github/actions/run-lua-tests
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
-      - name: Create vscode dist that can be installed locally
-        run: pnpm -F @cursorless/cursorless-vscode populate-dist --local-install
-        if: runner.os == 'Linux' && matrix.app_version == 'stable'
-      - name: Test create vsix
-        id: createVsix
-        uses: HaaLeo/publish-vscode-extension@v1
-        with:
-          pat: none
-          packagePath: packages/cursorless-vscode/dist
-          dryRun: true
-      - run: mv ${{ steps.createVsix.outputs.vsixPath }} cursorless-development.vsix
-        if: runner.os == 'Linux' && matrix.app_version == 'stable'
-      - name: Upload vsix
-        uses: actions/upload-artifact@v4
-        if: runner.os == 'Linux' && matrix.app_version == 'stable'
-        with:
-          name: vsix
-          path: cursorless-development.vsix
-      - name: Archive logs
-        uses: actions/upload-artifact@v4
-        with:
-          name: logs
-          path: ${{ env.VSCODE_LOGS_DIR }}
-        if: failure()
-      - name: Archive dumps
-        uses: actions/upload-artifact@v4
-        with:
-          name: dumps
-          path: ${{ env.VSCODE_CRASH_DIR }}
-        if: failure()
