--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,10 +40,6 @@ jobs:
       - run: pnpm --color install
       - run: pnpm --color compile
       - run: pnpm --color --filter '!cursorless-org' --filter '!cursorless-org-*' build
-      - run: xvfb-run -a pnpm --color test
-        if: runner.os == 'Linux'
-      - run: pnpm --color test
-        if: runner.os != 'Linux'
       - run: bash -x scripts/install-neovim-dependencies.sh
       - uses: rhysd/action-setup-vim@v1
         if: matrix.app_version != 'legacy'
@@ -52,5 +48,5 @@ jobs:
           version: ${{ matrix.app_version }}
           neovim: true
       - name: Run neovim lua tests
-        uses: ./.github/actions/run-lua-tests
+        uses: ./.github/actions/run-lua-tests.yml
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
