--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,5 +48,5 @@ jobs:
           version: ${{ matrix.app_version }}
           neovim: true
       - name: Run neovim lua tests
-        uses: ./.github/actions/test-neovim-lua.yml
+        uses: ./.github/actions/test-neovim-lua/
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
